--- a/Blik Mac/GLAFileCollectionViewController.xib
+++ b/Blik Mac/GLAFileCollectionViewController.xib
@@ -11,6 +11,7 @@
                 <outlet property="addToHighlightsMenuItem" destination="beX-h3-nbY" id="GBj-fp-Dsu"/>
                 <outlet property="openerApplicationsPopUpButton" destination="CSY-mw-Wdy" id="ZHO-lL-OdE"/>
                 <outlet property="previewHolderView" destination="qn1-n0-gYl" id="lx5-hz-3W2"/>
+                <outlet property="shareButton" destination="0XS-Tq-Orn" id="kMg-ZR-3Um"/>
                 <outlet property="sourceFilesListContextualMenu" destination="JOI-as-pHF" id="q63-4h-AMF"/>
                 <outlet property="sourceFilesListTableView" destination="vUu-g3-xAK" id="IgR-dz-cWU"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
@@ -29,7 +30,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="180" height="272"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <subviews>
-                                <scrollView verticalHuggingPriority="750" borderType="none" horizontalLineScroll="34" horizontalPageScroll="10" verticalLineScroll="34" verticalPageScroll="36" hasHorizontalScroller="NO" horizontalScrollElasticity="none" scrollerKnobStyle="light" translatesAutoresizingMaskIntoConstraints="NO" id="G7e-U8-1HC">
+                                <scrollView verticalHuggingPriority="750" borderType="none" autohidesScrollers="YES" horizontalLineScroll="34" horizontalPageScroll="10" verticalLineScroll="34" verticalPageScroll="36" hasHorizontalScroller="NO" horizontalScrollElasticity="none" scrollerKnobStyle="light" translatesAutoresizingMaskIntoConstraints="NO" id="G7e-U8-1HC">
                                     <rect key="frame" x="0.0" y="40" width="180" height="232"/>
                                     <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="FKf-XF-kgf">
                                         <rect key="frame" x="0.0" y="0.0" width="171" height="240"/>
@@ -128,7 +129,7 @@
                                         <rect key="frame" x="-100" y="-100" width="223" height="15"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                     </scroller>
-                                    <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="qa6-qD-4tk">
+                                    <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="qa6-qD-4tk">
                                         <autoresizingMask key="autoresizingMask"/>
                                     </scroller>
                                 </scrollView>
@@ -139,7 +140,7 @@
                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="180" id="Swz-bH-KE4"/>
                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="st1-uY-7GX"/>
                                     </constraints>
-                                    <buttonCell key="cell" type="square" title="Add File Or Folder" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Sit-FH-MdQ" customClass="GLAButtonCell">
+                                    <buttonCell key="cell" type="square" title="Add File or Folder" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Sit-FH-MdQ" customClass="GLAButtonCell">
                                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                         <font key="font" size="13" name="AvenirNext-Medium"/>
                                     </buttonCell>
@@ -210,8 +211,8 @@
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
                                         </popUpButton>
-                                        <button misplaced="YES" placeholderIntrinsicWidth="43" placeholderIntrinsicHeight="90" translatesAutoresizingMaskIntoConstraints="NO" id="wLr-wc-OZX" customClass="GLAButton">
-                                            <rect key="frame" x="168" y="0.0" width="131" height="40"/>
+                                        <button translatesAutoresizingMaskIntoConstraints="NO" id="wLr-wc-OZX" customClass="GLAButton">
+                                            <rect key="frame" x="183" y="0.0" width="116" height="40"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="40" id="Nv2-mc-EKR"/>
                                             </constraints>
@@ -241,10 +242,45 @@
                                                 <action selector="addSelectedFilesToHighlights:" target="-2" id="nSc-4o-ejN"/>
                                             </connections>
                                         </button>
+                                        <button translatesAutoresizingMaskIntoConstraints="NO" id="0XS-Tq-Orn" customClass="GLAButton">
+                                            <rect key="frame" x="108" y="0.0" width="17" height="40"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="40" id="Njy-ym-szB"/>
+                                            </constraints>
+                                            <buttonCell key="cell" type="square" title="Share" bezelStyle="shadowlessSquare" image="NSShareTemplate" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="NC6-is-aFe" customClass="GLAButtonCell">
+                                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                <font key="font" size="13" name="AvenirNext-Medium"/>
+                                            </buttonCell>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="cell.verticalOffsetDown">
+                                                    <integer key="value" value="0"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="hasSecondaryStyle" value="YES"/>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="backgroundInsetXAmount">
+                                                    <integer key="value" value="4"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="backgroundInsetYAmount">
+                                                    <integer key="value" value="8"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="leftSpacing">
+                                                    <integer key="value" value="13"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="rightSpacing">
+                                                    <integer key="value" value="13"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
+                                            <connections>
+                                                <action selector="showShareMenuForSelectedFiles:" target="-2" id="xWy-b9-6Sq"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="0XS-Tq-Orn" firstAttribute="top" secondItem="ktp-Qj-ozg" secondAttribute="top" id="7Lq-tY-UNZ"/>
+                                        <constraint firstItem="0XS-Tq-Orn" firstAttribute="leading" secondItem="CSY-mw-Wdy" secondAttribute="trailing" id="JmA-IP-RAa"/>
                                         <constraint firstItem="CSY-mw-Wdy" firstAttribute="leading" secondItem="ktp-Qj-ozg" secondAttribute="leading" constant="8" id="POI-N5-HB5"/>
                                         <constraint firstAttribute="centerY" secondItem="CSY-mw-Wdy" secondAttribute="centerY" id="VUK-7V-ToX"/>
+                                        <constraint firstItem="wLr-wc-OZX" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="0XS-Tq-Orn" secondAttribute="trailing" id="Zqt-Q0-oQ3"/>
+                                        <constraint firstAttribute="bottom" secondItem="0XS-Tq-Orn" secondAttribute="bottom" id="bOf-WW-E9Y"/>
                                         <constraint firstItem="wLr-wc-OZX" firstAttribute="top" secondItem="ktp-Qj-ozg" secondAttribute="top" id="qLW-QF-kjB"/>
                                         <constraint firstAttribute="height" constant="40" id="qjt-XT-qlL"/>
                                         <constraint firstAttribute="trailing" secondItem="wLr-wc-OZX" secondAttribute="trailing" id="rL4-l8-Mhw"/>
@@ -318,4 +354,7 @@
             <point key="canvasLocation" x="624" y="619.5"/>
         </menu>
     </objects>
+    <resources>
+        <image name="NSShareTemplate" width="11" height="16"/>
+    </resources>
 </document>
