--- a/Blik Mac/Base.lproj/MainMenu.xib
+++ b/Blik Mac/Base.lproj/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6751"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -379,6 +379,11 @@ DQ
                             <menuItem title="New Contacts Collection…" hidden="YES" keyEquivalent="C" id="McO-7U-HxW"/>
                             <menuItem isSeparatorItem="YES" hidden="YES" id="igl-0Q-9Ql"/>
                             <menuItem title="Change Preferred Applications…" hidden="YES" id="mBU-GE-fzv">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                            </menuItem>
+                            <menuItem isSeparatorItem="YES" id="jzY-mI-7mm"/>
+                            <menuItem title="Add File from Clipboard" keyEquivalent="I" id="MpW-K2-aFF"/>
+                            <menuItem title="Change Designated File Destinations…" id="myY-lt-LeI">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                             </menuItem>
                         </items>
