--- a/Blik Mac/Base.lproj/MainMenu.xib
+++ b/Blik Mac/Base.lproj/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6751"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7531"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -361,9 +361,9 @@ DQ
                         </items>
                     </menu>
                 </menuItem>
-                <menuItem title="Collection" id="Vc8-OF-5QR">
+                <menuItem title="Collect" id="Vc8-OF-5QR">
                     <modifierMask key="keyEquivalentModifierMask"/>
-                    <menu key="submenu" title="Collection" id="y5R-d6-Gfj">
+                    <menu key="submenu" title="Collect" id="y5R-d6-Gfj">
                         <items>
                             <menuItem title="New Collected Files Collection…" keyEquivalent="N" id="jfO-Ol-vRE">
                                 <connections>
@@ -385,6 +385,27 @@ DQ
                             <menuItem title="Add File from Clipboard" keyEquivalent="I" id="MpW-K2-aFF"/>
                             <menuItem title="Change Designated File Destinations…" id="myY-lt-LeI">
                                 <modifierMask key="keyEquivalentModifierMask"/>
+                            </menuItem>
+                            <menuItem isSeparatorItem="YES" id="Z4w-d3-1aP"/>
+                            <menuItem title="Move from Desktop" id="Q9N-nI-JmS">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <menu key="submenu" title="Move from Desktop" id="Uye-sn-0EI">
+                                    <items>
+                                        <menuItem title="Loading Files…" id="drd-t0-5wJ">
+                                            <modifierMask key="keyEquivalentModifierMask"/>
+                                        </menuItem>
+                                    </items>
+                                </menu>
+                            </menuItem>
+                            <menuItem title="Move from Downloads" id="e9f-I9-nCD">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <menu key="submenu" title="Move from Downloads" id="kqW-nT-fFP">
+                                    <items>
+                                        <menuItem title="Loading Files…" id="3lN-AL-Wog">
+                                            <modifierMask key="keyEquivalentModifierMask"/>
+                                        </menuItem>
+                                    </items>
+                                </menu>
                             </menuItem>
                         </items>
                     </menu>
