--- a/Blik Mac/GLACollectedFolderStackItemViewController.xib
+++ b/Blik Mac/GLACollectedFolderStackItemViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6751"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7531"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GLACollectedFolderStackItemViewController">
@@ -23,7 +23,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="mzD-n5-IlL" customClass="GLACollectedItemContentHolderView">
-                    <rect key="frame" x="0.0" y="20" width="480" height="155"/>
+                    <rect key="frame" x="0.0" y="60" width="480" height="75"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" priority="750" id="M9F-wG-JAp"/>
                     </constraints>
@@ -31,8 +31,8 @@
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="GcD-eU-Wtb" customClass="GLAOverlaidBarView">
                     <rect key="frame" x="0.0" y="20" width="480" height="40"/>
                     <subviews>
-                        <customView translatesAutoresizingMaskIntoConstraints="NO" id="6kY-Oc-dBE">
-                            <rect key="frame" x="90" y="0.0" width="300" height="40"/>
+                        <customView misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6kY-Oc-dBE">
+                            <rect key="frame" x="90" y="-40" width="300" height="40"/>
                             <subviews>
                                 <popUpButton translatesAutoresizingMaskIntoConstraints="NO" id="2iv-5m-YHK" customClass="GLAPopUpButton">
                                     <rect key="frame" x="8" y="8" width="100" height="24"/>
@@ -172,15 +172,15 @@
                 </customView>
             </subviews>
             <constraints>
+                <constraint firstItem="mzD-n5-IlL" firstAttribute="top" secondItem="ysM-AR-GRG" secondAttribute="bottom" id="0Rq-DP-pBB"/>
                 <constraint firstItem="ysM-AR-GRG" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="4gI-Ig-oNX"/>
                 <constraint firstItem="mzD-n5-IlL" firstAttribute="leading" secondItem="GcD-eU-Wtb" secondAttribute="leading" id="CMo-6w-sKz"/>
                 <constraint firstAttribute="trailing" secondItem="mzD-n5-IlL" secondAttribute="trailing" id="CfF-RF-Neq"/>
+                <constraint firstAttribute="bottom" secondItem="GcD-eU-Wtb" secondAttribute="bottom" constant="20" id="Gbt-1F-VkR"/>
+                <constraint firstItem="GcD-eU-Wtb" firstAttribute="top" secondItem="mzD-n5-IlL" secondAttribute="bottom" id="HD5-OD-Hpg"/>
                 <constraint firstItem="mzD-n5-IlL" firstAttribute="trailing" secondItem="GcD-eU-Wtb" secondAttribute="trailing" id="IOG-Uc-mUF"/>
-                <constraint firstAttribute="bottom" secondItem="mzD-n5-IlL" secondAttribute="bottom" constant="20" id="Qnq-dG-dMc"/>
                 <constraint firstAttribute="trailing" secondItem="ysM-AR-GRG" secondAttribute="trailing" id="Rb6-EE-XO3"/>
-                <constraint firstItem="mzD-n5-IlL" firstAttribute="bottom" secondItem="GcD-eU-Wtb" secondAttribute="bottom" id="iac-Pt-bE8"/>
                 <constraint firstAttribute="centerX" secondItem="GcD-eU-Wtb" secondAttribute="centerX" id="mgP-eG-AQT"/>
-                <constraint firstItem="mzD-n5-IlL" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="qO7-iW-Unl"/>
                 <constraint firstItem="ysM-AR-GRG" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="u0q-f4-JEO"/>
                 <constraint firstItem="mzD-n5-IlL" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="z2J-TB-RUV"/>
             </constraints>
