--- a/Blik Mac/GLAProjectViewController.xib
+++ b/Blik Mac/GLAProjectViewController.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6751"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7531"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GLAProjectViewController">
@@ -19,16 +20,16 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView identifier="projectView" translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY" customClass="GLAProjectView">
-            <rect key="frame" x="0.0" y="0.0" width="500" height="275"/>
+            <rect key="frame" x="0.0" y="0.0" width="667" height="275"/>
             <subviews>
                 <customView placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="30" translatesAutoresizingMaskIntoConstraints="NO" id="8vi-0s-ZAk" customClass="GLAView">
-                    <rect key="frame" x="0.0" y="0.0" width="500" height="30"/>
+                    <rect key="frame" x="0.0" y="0.0" width="667" height="30"/>
                     <connections>
                         <outlet property="delegate" destination="fD5-0A-qdK" id="OPS-R4-6E8"/>
                     </connections>
                 </customView>
                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="1000" placeholderIntrinsicWidth="312" placeholderIntrinsicHeight="29" translatesAutoresizingMaskIntoConstraints="NO" id="uUN-fG-dyR" customClass="GLATextField">
-                    <rect key="frame" x="18" y="228" width="464" height="32"/>
+                    <rect key="frame" x="18" y="228" width="631" height="32"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="32" id="Yz5-N8-tKB"/>
                     </constraints>
@@ -42,13 +43,13 @@
                     </connections>
                 </textField>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="yM7-GZ-JQa">
-                    <rect key="frame" x="0.0" y="38" width="200" height="176"/>
+                    <rect key="frame" x="0.0" y="38" width="233.5" height="176"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="Hnn-sF-Gd8"/>
                     </constraints>
                 </customView>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="NA8-Ro-OD1">
-                    <rect key="frame" x="210" y="38" width="290" height="174"/>
+                    <rect key="frame" x="243.5" y="38" width="423.5" height="174"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="290" id="zC6-7U-5ej"/>
                     </constraints>
@@ -60,6 +61,7 @@
                 <constraint firstAttribute="trailing" secondItem="NA8-Ro-OD1" secondAttribute="trailing" id="6yW-nm-WOC"/>
                 <constraint firstItem="uUN-fG-dyR" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="Jtf-4x-qzc"/>
                 <constraint firstAttribute="trailing" secondItem="uUN-fG-dyR" secondAttribute="trailing" constant="20" id="KXo-l8-01e"/>
+                <constraint firstItem="yM7-GZ-JQa" firstAttribute="width" secondItem="Hz6-mo-xeY" secondAttribute="width" multiplier="0.35" priority="750" id="MUs-Tv-63S"/>
                 <constraint firstItem="yM7-GZ-JQa" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="SdN-BY-sLg"/>
                 <constraint firstItem="NA8-Ro-OD1" firstAttribute="leading" secondItem="yM7-GZ-JQa" secondAttribute="trailing" constant="10" id="TSH-RS-7kg"/>
                 <constraint firstItem="8vi-0s-ZAk" firstAttribute="top" secondItem="yM7-GZ-JQa" secondAttribute="bottom" constant="8" id="U1g-Rk-SCq"/>
@@ -70,6 +72,7 @@
                 <constraint firstItem="NA8-Ro-OD1" firstAttribute="bottom" secondItem="yM7-GZ-JQa" secondAttribute="bottom" id="qat-zh-ltU"/>
                 <constraint firstItem="uUN-fG-dyR" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="15" id="xJ9-mw-q1z"/>
             </constraints>
+            <point key="canvasLocation" x="-285.5" y="253.5"/>
         </customView>
         <viewController title="Collections View Controller" id="raF-W4-b8E" customClass="GLAProjectCollectionsViewController">
             <connections>
@@ -467,9 +470,10 @@
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" selectionHighlightStyle="none" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="32" viewBased="YES" id="QbG-kD-SIR">
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="0.0"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <size key="intercellSpacing" width="3" height="2"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                         <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                         <tableColumns>
                             <tableColumn width="197" minWidth="40" maxWidth="1000" id="7U9-Qe-Esg">
@@ -546,9 +550,10 @@
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="sequential" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="39" rowSizeStyle="automatic" viewBased="YES" id="dqI-ZC-qqF">
+                        <rect key="frame" x="0.0" y="0.0" width="290" height="0.0"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <size key="intercellSpacing" width="3" height="2"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                         <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                         <tableColumns>
                             <tableColumn width="287" minWidth="40" maxWidth="3000" id="9CY-vT-0i1">
